chore: textlint --fix app/content/posts/ を実行

--- a/app/content/posts/20200405.mdx
+++ b/app/content/posts/20200405.mdx
@@ -27,7 +27,7 @@ GitHub リポジトリにはこのように書いてあります。
 参考：[Ruby によるデザインパターン](https://www.amazon.co.jp/Ruby%E3%81%AB%E3%82%88%E3%82%8B%E3%83%87%E3%82%B6%E3%82%A4%E3%83%B3%E3%83%91%E3%82%BF%E3%83%BC%E3%83%B3-Russ-Olsen/dp/4894712857)
 
 この表現がわかりやすかったです。
-特定のビジネスロジックをコマンドとして作成し、通常の実行メソッドと併せて元に戻す（アンドゥ）メソッドも用意することができます。ActiveRecord のマイグレーション機能は Command パターンの実装の典型例です。
+特定のビジネスロジックをコマンドとして作成し、通常の実行メソッドと併せて元に戻す（アンドゥ）メソッドも用意できます。ActiveRecord のマイグレーション機能は Command パターンの実装の典型例です。
 
 話が脱線しましたが、以上の Command パターンを ActiveInteraction クラスを継承することで実現できるようです。
 
