--- a/app/content/posts/20200520.mdx
+++ b/app/content/posts/20200520.mdx
@@ -12,7 +12,7 @@ isPublished: true
 
 #### 想定読者
 
-想定読者については以下のように書かれていました。
+想定読者については次のように書かれていました。
 
 - 最初の章のコードを何の問題もなく理解できるひと # いくつもサンプルコードがでてくるので割愛します。
 - 配列を繰り返すのにどのようなコードを書くか？
@@ -30,13 +30,13 @@ isPublished: true
 
 ## 1 章　頭文字 M
 
-冒頭で「 **メタプログラミングとは、コードを記述するコードを記述することである。** 」と書かれています。
-また途中には「 **メタプログラミングとは、言語要素を実行時に操作するコードを記述することである。** 」と書かれています。
+冒頭で「**メタプログラミングとは、コードを記述するコードを記述することである。**」と書かれています。
+また途中には「**メタプログラミングとは、言語要素を実行時に操作するコードを記述することである。**」と書かれています。
 
 この定義の例として、Active Record が挙げられています。
 例えば Ruby で Movie クラスがあるとして、Movie クラスのオブジェクト内部の変数を読み書きしたい場合はアクセサメソッドを用意する必要があります。
 しかし、ActiveRecord::Base を継承することで、コード実行時にアクセサメソッドを定義してくれます。
-これが先程挙げた、**言語要素を実行時に操作するコードを記述する**を表していますね。
+これがさきほど挙げた、**言語要素を実行時に操作するコードを記述する**を表していますね。
 
 Ruby はスクリプト言語であり、コンパイルをしなくてもいいので実行時に言語要素の殆どにアクセスが可能です。だから、コード実行時にメソッドを定義したり、もともとの定義を書き換えたりできます。メタプログラミングと非常に相性の良い言語が Ruby であり、メタプログラミングを習得することで Ruby の力をより引き出すことができます。
 
@@ -45,8 +45,8 @@ Ruby はスクリプト言語であり、コンパイルをしなくてもいい
 この章からは主人公のボブとメンターのビルの対話形式で進行していきます。
 
 - class キーワードで既存のクラスを再オープンして、その場で変更を加えることができる。 => **オープンクラス**
-- オープンクラスの性質を利用して既存クラスにメソッドを追加したり、既にクラスに定義されているメソッドを再定義する。 => **モンキーパッチ**
-  - モンキーパッチをすると、以後そのクラスを使う際にも定義が変わってしまうので非常に影響が大きい。Refinements を使うと、ファイルやモジュール定義が終わるところまでにパッチを当てるスコープを制限することができる。
+- オープンクラスの性質を利用して既存クラスにメソッドを追加したり、すでにクラスに定義されているメソッドを再定義する。 => **モンキーパッチ**
+  - モンキーパッチをすると、以後そのクラスを使う際にも定義が変わってしまうので非常に影響が大きい。Refinements を使うと、ファイルやモジュール定義が終わるところまでにパッチを当てるスコープを制限できる。
 
 ```rb
 module PrintExtension
@@ -103,9 +103,9 @@ pry(main)> User.ancestors
 module を class に include することで、継承チェーンで言うと class の真上に module が挿入され、それより上のチェーンは押し上げます。
 include でなく prepend を使えば、class の下に module が挿入されます。
 
-Object クラスは Kernel モジュールを継承しているので、Kernel にメソッドを追加することでカーネルメソッドが全てのオブジェクトで使えるようになります。
+Object クラスは Kernel モジュールを継承しているので、Kernel にメソッドを追加することでカーネルメソッドがすべてのオブジェクトで使えるようになります。
 
-オブジェクトのメソッドはクラス（モジュール）に住んでおり、継承チェーンの中で複数のクラスが同名のメソッドを持っていた場合は、先に呼ばれたクラスのメソッドが使わます。
+オブジェクトのメソッドはクラス（モジュール）に住んでおり、継承チェーンのなかで複数のクラスが同名のメソッドを持っていた場合は、先に呼ばれたクラスのメソッドが使わます。
 user の `print` がどのクラスのメソッドなのか探索する際には、User クラスから上に向かって調べていくとよいでしょう。
 
 ```shell
@@ -134,7 +134,7 @@ pry(main)> Kernel.methods.grep(/print/)
 
 「可能であれば動的メソッドを使い、仕方がなければゴーストメソッドを使う」
 
-と締めくくられていましたが、 `#send` もクラスやモデル、テーブル等の設計次第では使う場面はあまりない気がしました。（それでもメソッドを引数にとれるのは便利。。）
+と締めくくられていましたが、 `#send` もクラスやモデル、テーブルなどの設計次第では使う場面はあまりない気がしました。（それでもメソッドを引数にとれるのは便利。。）
 メタプロ Ruby のサンプルコードはテーブル設計がひどく、そのようなプロジェクトにあたった際の対症療法としてはいいかもしれません。 `#send` を使いたいと思った時点で設計を見直してもいいかもしれないですね。
 とはいえ Ruby は非常に柔軟で強力な言語だと再認識しました。
 
