--- a/app/content/posts/20200614.mdx
+++ b/app/content/posts/20200614.mdx
@@ -47,7 +47,7 @@ export default IndexPage;
 ### 背景
 
 当ブログは、ブログに関する情報は `pages/_app.tsx` の Head タグ内に、ブログ記事ごとの情報は `lib/components/layout.tsx` の Head タグ内にメタ情報として設定してあります。
-しかし、上記で示したような meta タグの `key` オプションが設定されていなかったため、`og:title` 等の[OGP](https://ogp.me/)に関する meta タグが重複したまま parse されてしまい、例えば Slack チャンネルにブログ記事のリンクを貼り付けた際に、各記事のタイトル等のメタ情報が表示されませんでした。
+しかし、上記で示したような meta タグの `key` オプションが設定されていなかったため、`og:title` などの[OGP](https://ogp.me/)に関する meta タグが重複したまま parse されてしまい、例えば Slack チャンネルにブログ記事のリンクを貼り付けた際に、各記事のタイトルなどのメタ情報が表示されませんでした。
 
 ### その他の方法
 
@@ -106,8 +106,8 @@ Next.js の場合はこちらのサンプルリポジトリを参考にすると
 
 今回の件でドキュメントの重要性を再確認できました。Next.js の場合ドキュメントは英語ではありますが、フレームワーク自体がシンプルなのでドキュメントも読みやすいです。なので、毛嫌いせずに読み込んでみます。
 
-OpenGraph に関しては、以下のサイトで URL を入力することでプロパティ設定を調べることができます。
+OpenGraph に関しては、次のサイトで URL を入力することでプロパティ設定を調べることができます。
 
 [Facebook for Developers / シェアデバッガー](https://developers.facebook.com/tools/debug/)
 
-修正が必要な箇所や、SNS に URL を投稿した際のプレビューなども確認することができます。
+修正が必要な箇所や、SNS に URL を投稿した際のプレビューなども確認できます。
