--- a/app/content/posts/20200711.mdx
+++ b/app/content/posts/20200711.mdx
@@ -27,7 +27,7 @@ Cat().eat()
 Cat.meow()
 ```
 
-`static` キーワードを使ってプロパティやメソッドを宣言すれば、そのクラスの全インスタンスで共通して利用することができる。
+`static` キーワードを使ってプロパティやメソッドを宣言すれば、そのクラスの全インスタンスで共通して利用できる。
 
 参照する際にはインスタンス生成されないので、メモリの使用量を抑えることができる。
 
