--- a/app/content/posts/20200823.mdx
+++ b/app/content/posts/20200823.mdx
@@ -9,7 +9,7 @@ isPublished: true
 
 ## 問題
 
-iterm2 で tmux, Neovim と使い普段開発をしているが、以下のように画面レイアウトが崩れてカーソル位置がおかしくなったり、操作後に文字が画面に残ってしまうことがあった。
+iterm2 で tmux, Neovim と使い普段開発をしているが、次のように画面レイアウトが崩れてカーソル位置がおかしくなったり、操作後に文字が画面に残ってしまうことがあった。
 特にプラグインによって画面の描画に変更が加わる際には、描画がおかしくなることが多かった。
 
 `import` の後ろにカーソルがあるが、実際のカーソル位置は 1 行目 `import` の手前。
