--- a/app/content/posts/20201228.mdx
+++ b/app/content/posts/20201228.mdx
@@ -8,7 +8,7 @@ tags:
 isPublished: true
 ---
 
-APImode で ActiveStorage を利用した際、開発環境で以下のエラーが発生したため対処方法を記録
+APImode で ActiveStorage を利用した際、開発環境で次のエラーが発生したため対処方法を記録
 
 ## エラー
 
