--- a/app/content/posts/20210616.mdx
+++ b/app/content/posts/20210616.mdx
@@ -11,7 +11,7 @@ isPublished: true
 
 データの整合性を保つために、トランザクションはたびたび使われる。
 
-銀行の入金処理がよく例に挙げられるが、A 口座から B 口座に対して 5000 円を振込む際には、
+銀行の入金処理がよく例に挙げられるが、A 口座から B 口座に対して 5000 円を振り込みむ際には、
 
 1. 対象となる口座残高を読み込む
 
@@ -25,7 +25,7 @@ A 口座の 5000 円が消失してしまうことになる。
 
 トランザクションを使うことで、失敗した場合にはトランザクション前の状態までロールバックする。
 
-ただ、上記のトランザクション処理を行っている途中で C 口座から B 口座への振込が行われた場合には処理が重複してしまうため、
+ただ、上記のトランザクション処理を行なっている途中で C 口座から B 口座への振り込みが行なわれた場合には処理が重複してしまうため、
 
 2 つのトランザクション終了時点で B 口座の残高が合計 5000 円しか増えないことがある。
 
@@ -80,13 +80,13 @@ def with_lock(lock = true)
 end
 ```
 
-メソッドの中ではトランザクション内で `lock!` を実行し、メソッドに渡したブロックを実行している。
+メソッドのなかではトランザクション内で `lock!` を実行し、メソッドに渡したブロックを実行している。
 
 ## MySQL5.7 の GET_LOCK, RELEASE_LOCK
 
 MySQL では排他ロックの機能として `GET_LOCK(str, timeout)` , `RELEASE_LOCK(str)` がある。
 
-前者は任意の文字列に対してロックをかけ、第 2 引数ではロックの取得までの待機時間を指定することができる。第 2 引数を渡さない場合には待機せず 0 を返す。後者は任意の文字列に対するロックを解放する。
+前者は任意の文字列に対してロックをかけ、第 2 引数ではロックの取得までの待機時間を指定できる。第 2 引数を渡さない場合には待機せず 0 を返す。後者は任意の文字列に対するロックを解放する。
 
 ActiveRecord には MySQL 用のクラスがあり、用意されているメソッドを使うことでもロックを実装できる。
 
