--- a/app/content/posts/20220205.mdx
+++ b/app/content/posts/20220205.mdx
@@ -11,7 +11,7 @@ isPublished: true
 
 ## 結論
 
-以下の issue にある設定を行う。
+次の issue にある設定を行なう。
 [How to use true colors in vim under tmux? #1246](https://github.com/tmux/tmux/issues/1246)
 
 ```vim
