--- a/app/content/posts/20230712194532.mdx
+++ b/app/content/posts/20230712194532.mdx
@@ -14,13 +14,13 @@ isPublished: true
 
 ## 前提
 
-移行アシスタントや Time Machine を利用すれば基本的に待機するだけでセットアップが完了しますが、社用 PC の初期セットアップなどそれらを利用できないケースが考えられます。
+移行アシスタントや Time Machine を利用すれば基本的に待機するだけでセットアップが完了しますが、社用パソコンの初期セットアップなどそれらを利用できないケースが考えられます。
 
-そのため、今回は新規にユーザーを作成した上でセットアップを進めます。
+そのため、今回は新規にユーザーを作成したうえでセットアップを進めます。
 
 ## システム環境設定
 
-以下の手順でシステム環境設定を行います。
+次の手順でシステム環境設定を行ないます。
 
 - Apple ID でサインインする
 - Wi-Fi
@@ -56,13 +56,13 @@ isPublished: true
       - Caps Lock キーと Control キーを入れ替える
   - 入力ソース
     - ABC, ひらがな（Google）を設定
-      - Google 日本語入力の入力ソースが表示されない場合は、一度他の入力ソースを設定した上で再度入力ソースの編集を行う
+      - Google 日本語入力の入力ソースが表示されない場合は、一度他の入力ソースを設定したうえで再度入力ソースの編集を行なう
 - トラックパッド
   - 軌跡の速さを最速にする
 
 ## ターミナル
 
-以下の手順でターミナル上で設定を行います。
+次の手順でターミナル上で設定を行ないます。
 
 1. Homebrew をインストールする
 
@@ -75,7 +75,7 @@ isPublished: true
 3. dotfiles を clone する
 
 - `git clone https://github.com/reona5/dotfiles.git`
-- `make` コマンドを実行し、セットアップを行う
+- `make` コマンドを実行し、セットアップを行なう
 
 4. asdf でプラグインを追加し、動作するバージョンをインストールする
 
@@ -85,7 +85,7 @@ isPublished: true
 
 - `pnpm add -g typescript typescript-language-server prettier @fsouza/prettierd eslint eslint_d`
 
-6. Neovim を起動し、以下のコマンドを実行してプラグインをインストールする
+6. Neovim を起動し、次のコマンドを実行してプラグインをインストールする
 
 - `:Lazy`
 
@@ -99,16 +99,16 @@ isPublished: true
 
 ## 各種アプリケーション
 
-インストール済みの各種アプリケーションを起動し、初回設定を行います。アプリケーション一覧は Brewfile に書かれています。
+インストール済みの各種アプリケーションを起動し、初回設定を行ないます。アプリケーション一覧は Brewfile に書かれています。
 
 - https://github.com/reona5/dotfiles/blob/main/.Brewfile
 
-追加で設定が必要なアプリケーションは以下のとおりです。
+追加で設定が必要なアプリケーションは次のとおりです。
 
 - Alacritty
   - Finder 上で ⌘ キーを押下しながらクリックして開く
 - Google Chrome
-  - Google アカウントでログインして設定の同期を行う
+  - Google アカウントでログインして設定の同期を行なう
   - Google Meet PWA をインストールする
     - https://support.google.com/meet/answer/10708569?hl=ja
 - Raycast でショートカットキーを設定する
@@ -125,7 +125,7 @@ isPublished: true
 
 今回は macOS のセットアップ手順をまとめました。
 
-dotfiles を利用することでほとんどの設定を行うことができますが、システム環境設定は初回に設定して頻繁に更新することもないので、忘れていることもあり設定に予想以上に時間がかかりました。
+dotfiles を利用することでほとんどの設定を行なうことができますが、システム環境設定は初回に設定して頻繁に更新するこ伴いので、忘れていることもあり設定に予想以上に時間がかかりました。
 
 また、dotfiles は CI で build 時の挙動を担保しているのですが、インストールしたアプリケーションを実際に起動しようとした際に依存しているリソースがなく立ち上がらないこともありました。
 そのため、追加でライブラリをインストールするなど dotfiles の内容を見直すいい機会にもなりました。
