--- a/app/content/posts/20230921220346.mdx
+++ b/app/content/posts/20230921220346.mdx
@@ -9,14 +9,14 @@ isPublished: true
 
 ## はじめに
 
-今年の3月に子を授かり、半年間の育休を取得しました。出産が2週間早まってしまったため、育休の開始時期も早まり出産前後は落ち着かなかったです。
-特に子に関する様々な手続きに関しては、提出先や期限が複数あり煩雑であったため、主にどのような手続きがあったのか振り返っておきます。
+今年の 3 月に子を授かり、半年間の育休を取得しました。出産が 2 週間早まってしまったため、育休の開始時期も早まり出産前後は落ち着かなかったです。
+特に子に関するさまざまな手続きに関しては、提出先や期限が複数あり煩雑であったため、主にどのような手続きがあったのか振り返っておきます。
 
 ## 職場での手続き
 
-基本的には会社からの指示に従って進めていきましたが、同僚への引き継ぎ等も並行して行うことから、できるだけ余裕を持って進めるとよいでしょう。
+基本的には会社からの指示に従って進めていきましたが、同僚への引き継ぎ等も並行して行なうことから、できるだけ余裕を持って進めるとよいでしょう。
 
-具体的には、以下のような手続きがあります。
+具体的には、次のような手続きがあります。
 
 - 出産報告
 - 育児休業申請
@@ -29,7 +29,7 @@ isPublished: true
 職場によって提出書類や手続きが異なる場合があります。
 健康保険証の発行や育児休業給付金の申請に関して、健康保険組合ではなく国民健康保険である場合には役所での手続きが必要になるようです。
 
-その他に、母親の場合は出産育児一時金や出産手当金の申請が必要です。特に出産手当金に関しては、職場に提出する請求書を産院で事前に記載してもらう必要があり、私の依頼先の病院では返却までに1週間ほど要したので、出産前に請求書を用意しておき早めに産院と連携しておくとスムーズでしょう。
+その他に、母親の場合は出産育児一時金や出産手当金の申請が必要です。特に出産手当金に関しては、職場に提出する請求書を産院で事前に記載してもらう必要があり、私の依頼先の病院では返却までに 1 週間ほど要したので、出産前に請求書を用意しておき早めに産院と連携しておくとスムーズでしょう。
 
 ## 役所での手続き
 
@@ -40,7 +40,7 @@ isPublished: true
 - 担当課
   - 戸籍課
 - 期限
-  - 生まれた日から14日以内
+  - 生まれた日から 14 日以内
 - 必要なもの
   - 産院でもらえる出生届
   - 母子手帳
@@ -53,7 +53,7 @@ isPublished: true
 - 担当課
   - こども家庭支援課
 - 期限
-  - 生まれた日の翌日から15日以内
+  - 生まれた日の翌日から 15 日以内
 - 必要なもの
   - 申請用紙
   - 印鑑
@@ -66,7 +66,7 @@ isPublished: true
 - 担当課
   - こども家庭支援課
 - 期限
-  - なるべく早く（1ヶ月健診で必要になるため）
+  - なるべく早く（1 か月健診で必要になるため）
 - 必要なもの
   - 申請用紙
   - 印鑑
