--- a/app/content/posts/20200620.mdx
+++ b/app/content/posts/20200620.mdx
@@ -9,9 +9,9 @@ tags:
 isPublished: true
 ---
 
-私は普段基本的には Vim を使って開発を行い、当ブログの記事も Vim で書いています。
+私は普段基本的には Vim を使って開発を行ない、当ブログの記事も Vim で書いています。
 
-ブログを書く際に画像を文章中に展開したい場面は少なくないですが、VSCode の拡張機能である[Paste Image](https://marketplace.visualstudio.com/items?itemName=mushan.vscode-paste-image)が非常に便利で、画像をコピペする際は VSCode を使っていました。非効率ですね。
+ブログを書く際に画像を文章中に展開したい場面は少なくないですが、VSCode の拡張機能である[Paste Image](https://marketplace.visualstudio.com/items?itemName=mushan.vscode-paste-image)が非常に便利で、画像をコピーアンドペーストする際は VSCode を使っていました。非効率ですね。
 もちろん Vim だと標準ではそのような機能はないので、プラグインを探してみましたが Paste Image のような便利さを感じるものはありませんでした。
 
 そのため、**シェルスクリプトでコマンドを作成し、クリップボードにコピーしてある画像をショートカットで展開するよう設定しました。**
@@ -115,10 +115,10 @@ nnoremap <Leader>p <C-c>:r! paste_image_on_vim_markdown <CR>
 
 ## さいごに
 
-これで Vim でもブログに画像を展開する際は非常にスムーズに行えるようになりました。
+これで Vim でもブログに画像を展開する際は非常にスムーズに行なえるようになりました。
 普段[Alfred](https://www.alfredapp.com/)のクリップボード機能にはかなりお世話になっているのですが、履歴の一番手前に貼りたい画像を持ってくれば過去の画像も問題なく展開できます。
 
 ![](/2020-06-22-03-03-11.png)
 
 実現したい機能を満たすプラグインがない場合は、自分でカスタマイズするのもありですね。
-今回新しいライブラリの存在を知れたり、初めてシェルスクリプトも触れたので勉強になったし、期待する機能も実現できてハッピーです 🙌
+今回新しいライブラリの存在を知れたり、はじめてシェルスクリプトも触れたので勉強になったし、期待する機能も実現できてハッピーです 🙌
