--- a/app/content/posts/20200708.mdx
+++ b/app/content/posts/20200708.mdx
@@ -14,7 +14,7 @@ isPublished: true
 
 一方で、表題の Swift で用いるアクセス修飾子はメソッド定義だけでなくクラス定義や変数の宣言時にも使います。（静的型付け言語では割と一般的みたいですね。）
 
-どのプログラミング言語においても変数やメソッド等のスコープを理解することは非常に重要なことですので、 Swift の Access Control についてまとめます。
+どのプログラミング言語においても変数やメソッドなどのスコープを理解することは非常に重要なことですので、 Swift の Access Control についてまとめます。
 
 ## Access Control（アクセス修飾子）
 
