chore: textlint --fix app/contents/posts/*.mdx

--- a/app/content/posts/20200708.mdx
+++ b/app/content/posts/20200708.mdx
@@ -12,9 +12,9 @@ isPublished: true
 私がよく使っている Ruby におけるアクセス制御には `Module#private` や `Module#protected` があります。
 これらはメソッドを定義する際にスコープを分ける目的で使用されます。
 
-一方で、表題の Swift で用いるアクセス修飾子はメソッド定義だけでなくクラス定義や変数の宣言時にも使います。（静的型付け言語では割と一般的みたいですね。）
+一方で、表題の Swift で用いるアクセス修飾子はメソッド定義だけでなくクラス定義や変数の宣言時にも使います。（静的型付け言語では割と一般的みたいですね）
 
-どのプログラミング言語においても変数やメソッド等のスコープを理解することは非常に重要なことですので、 Swift の Access Control についてまとめます。
+どのプログラミング言語においても変数やメソッドなどのスコープを理解することは非常に重要なことですので、 Swift の Access Control についてまとめます。
 
 ## Access Control（アクセス修飾子）
 
