--- a/app/content/posts/20200331.mdx
+++ b/app/content/posts/20200331.mdx
@@ -15,7 +15,7 @@ isPublished: true
 
 Web に関わる開発をしている方であれば、ソースコードのホスティングに[GitHub](https://github.co.jp)を利用している人は多いのではないでしょうか。
 
-GitHub には[GitHub Pages](https://pages.github.com/)という機能があり、静的ページをホスティングできます。デフォルトでは`(GitHubのアカウント名).github.io` のリポジトリ名が URL となりますが、カスタムドメインを使用することもできます。（個人的に github.io は充分シンプルで良いと思うので、このまま使っています。）
+GitHub には[GitHub Pages](https://pages.github.com/)という機能があり、静的ページをホスティングできます。デフォルトでは`(GitHubのアカウント名).github.io` のリポジトリ名が URL となりますが、カスタムドメインを使用することもできます。（個人的に github.io は充分シンプルで良いと思うので、このまま使っています）
 
 また、昨年末には CI/CD の機能を実現する[GitHub Actions](https://github.co.jp/features/actions)が正式版として公開され話題になりましたね。
 
