--- a/app/content/posts/20200405.mdx
+++ b/app/content/posts/20200405.mdx
@@ -51,7 +51,7 @@ end
 
 ActiveInteraction は、コントローラとは別にビジネスロジックを記述しておく場所を提供してくれます。
 ActiveInteraction クラスを継承した Service クラスに特定のビジネスロジックを書いておけば、
-コントローラでは `run` メソッドで呼び出すだけで済むようになるので、簡潔になりますね。(リファレンスでは `app/interactions/` 配下に配置することを推奨しています)
+コントローラでは `run` メソッドで呼び出すだけで済むようになるので、簡潔になりますね。(リファレンスでは `app/interactions/` 配下に配置することを推奨しています）
 
 ## 2. ロジックを分離できるため、テストが書きやすくなる
 
