--- a/app/content/posts/20200520.mdx
+++ b/app/content/posts/20200520.mdx
@@ -134,7 +134,7 @@ pry(main)> Kernel.methods.grep(/print/)
 
 「可能であれば動的メソッドを使い、仕方がなければゴーストメソッドを使う」
 
-と締めくくられていましたが、 `#send` もクラスやモデル、テーブルなどの設計次第では使う場面はあまりない気がしました。（それでもメソッドを引数にとれるのは便利。。）
+と締めくくられていましたが、 `#send` もクラスやモデル、テーブルなどの設計次第では使う場面はあまりない気がしました。（それでもメソッドを引数にとれるのは便利。）
 メタプロ Ruby のサンプルコードはテーブル設計がひどく、そのようなプロジェクトにあたった際の対症療法としてはいいかもしれません。 `#send` を使いたいと思った時点で設計を見直してもいいかもしれないですね。
 とはいえ Ruby は非常に柔軟で強力な言語だと再認識しました。
 
