--- a/app/content/posts/20200613.mdx
+++ b/app/content/posts/20200613.mdx
@@ -43,7 +43,7 @@ OpenAPI 仕様に関するドキュメントはこちらから参照できます
 
 ![](/2020-06-13-15-36-51.png)
 
-ちなみに neovim だと、[coc.nvim](https://github.com/neoclide/coc.nvim)プラグインは yaml ファイルにも対応しており、エラー表示や補完機能があります。（だいたいのフォーマットに対応しているのでめちゃくちゃ便利です。）
+ちなみに neovim だと、[coc.nvim](https://github.com/neoclide/coc.nvim)プラグインは yaml ファイルにも対応しており、エラー表示や補完機能があります。（だいたいのフォーマットに対応しているのでめちゃくちゃ便利です）
 
 ## API ドキュメントの確認
 
