--- a/app/content/posts/20210628.mdx
+++ b/app/content/posts/20210628.mdx
@@ -13,7 +13,7 @@ WEB アプリケーション開発に参画すると、Docker でアプリケー
 
 環境構築を簡単に行なうことができるのは大きなメリットではあるが、次のようなデメリットもある。
 
-- メモリの使用量が非常に多い。（特に Docker for Mac の場合は Linux と比べて多いらしい。）
+- メモリの使用量が非常に多い。（特に Docker for Mac の場合は Linux と比べて多いらしい）
 - アプリケーションコマンド実行時、`docker-compose exec(run) ${container_name}` を先頭につける必要がある。
   - コマンド入力に数秒程度長くかかる
   - `docker-compose run(exec) ${container_name} bash` でコンテナでシェルを実行することでコマンド実行に関しては楽になる
