--- a/app/content/posts/20210702.mdx
+++ b/app/content/posts/20210702.mdx
@@ -76,7 +76,7 @@ Overwrite /project/config/application.rb? (enter
 ## 最後に
 
 - gem は便利なものが多い一方で、今回は密結合になっていたために対応に非常に苦労した。一長一短。
-- グレードアップによる差分は非常に大きくなる可能性があるので、状況に応じて適切な粒度で PR を分割したほうがよさそう。（今回 Webpacker のアップグレードは別 PR に分けた。）
+- グレードアップによる差分は非常に大きくなる可能性があるので、状況に応じて適切な粒度で PR を分割したほうがよさそう。（今回 Webpacker のアップグレードは別 PR に分けた）
 
   分割することによって逆にレビュアーが混乱するケースもあると思うので注意が必要。
 
