--- a/app/content/posts/20231229095156.mdx
+++ b/app/content/posts/20231229095156.mdx
@@ -37,7 +37,7 @@ VoiceOver をオンにする方法は複数あります。
 ### iOS
 
 - 設定
-  - アクセシビリティ > VoiceOver を選択し、オンにする
+  - アクセシビリティ → VoiceOver を選択し、オンにする
 - コントロールセンターに追加する
 - アクセシビリティのショートカットに設定して使用する
 - Siri に「VoiceOver をオンにして」と話しかける
