--- a/app/content/posts/20241117131610.mdx
+++ b/app/content/posts/20241117131610.mdx
@@ -1,10 +1,10 @@
 ---
-title: '10月にラクスル株式会社に入社した'
-description: ''
+title: 'ラクスル株式会社に入社した'
+description: '今年の9月にこれまで働いていたメドピア株式会社を退職しました。そして翌月の10月にラクスル株式会社に入社しました。'
 date: '2024-11-17T13:16:10+09:00'
 tags:
   - career
-isPublished: false
+isPublished: true
 ---
 
 今年の9月にこれまで働いていたメドピア株式会社を退職しました。そして翌月の10月にラクスル株式会社に入社しました。
@@ -13,35 +13,58 @@ isPublished: false
 
 ## なぜ転職したのか
 
-自分が所属していたチームでは、主にプロダクト横断でフロントエンド関連の課題の解決に取り組んでいました。
+私が所属していたチームでは、主にプロダクト横断でフロントエンド関連の課題の解決に取り組んでいました。
 直近ではデザインシステムの導入や UI ライブラリの構築に携わっていましたが、それらに区切りがつくタイミングだったことがきっかけとしては大きかったです。
 
-また、自分は製薬会社の MR としてキャリアをスタートしており、前職でも医療に関するプロダクトを開発していましたが、それとは異なるドメインで社会課題に向き合ってみたい気持ちも強く、今回の転職活動に踏み切りました。
+また、私は製薬会社の MR としてキャリアをスタートしており、前職でも医療に関するプロダクトを開発していましたが、それとは異なるドメインで社会課題に向き合ってみたい気持ちも強く、今回の転職活動に踏み切りました。
 
 ## 転職活動について
 
 ### 期間
 
-転職活動の期間としては、2ヶ月間ほど取り組みました。
-具体的なスケジュールでいうと、キャリア棚卸しを本格的に始めたのが6月初旬で、転職活動を完全に終えたのが8月中旬でした。
+転職活動の期間としては、約2ヶ月間取り組みました。
+具体的なスケジュールは、キャリア棚卸しを本格的に始めたのが6月初旬で、転職活動を完全に終えたのが8月中旬でした。
 
 ### 媒体
 
-今回はいくつかのキャリアエージェントにコンタクトして活動していました。
-最も頼らせて頂いたのが Forkwell で、キャリアの壁打ちや職務経歴書の添削、選考の進捗管理などもご協力いただき、非常に心強かったです。
+キャリアエージェントは Findy、ビズリーチ、Forkwell の3つを利用しました。また、リファラル採用や直接コーポレートサイトから応募した企業もありました。
 
-以下は選考の進捗状況を管理していたスプレッドシートで、用意してくださったフォーマットを活用しました。
+#### Forkwell
+
+当初は Forkwell を利用する予定はなかったのですが、転職活動を始めて少しのタイミングで[赤川さん](https://x.com/Akira_Akagawa)の登壇を拝見し、すぐに面談の予約を入れました。IT エンジニアのキャリアオタクと呼称されるのが納得できるくらい、公開されている記事も濃い内容のものばかりでとても面白いです。
+
+- [テックリードはキャリアの分岐点。取材でわかった6系統の役割と市場価値のリアル](https://pr.forkwell.com/career_navi/six_patterns_of_tech_leads/)
+- [あなたは上位何％？ITエンジニアの年収分布まとめ【データベース完全公開】](https://pr.forkwell.com/data_insights/annual-income-distribution-of-it-developers/)
+- [本当にエンジニアバブルは崩壊したのか？](https://pr.forkwell.com/blog/has-the-engineering-bubble-about-to-burst/)
+
+最終的に最も頼らせて頂いたのが Forkwell で、キャリアの壁打ちや職務経歴書の添削、選考の進捗管理などもご協力いただき、非常に心強かったです。
+特に、転職活動は孤独で不安になることが多いのではないかと思いますが、Forkwell ではエンジニア経験のある方に親身になって自分のキャリアについて考えていただき、終始とても心強かったです。
+
+以下は選考の進捗状況を管理していたスプレッドシートで、実際に Forkwell で用意してくださったフォーマットを活用しました。
 カジュアル面談を受けて、実際に選考に進んだのは9社でした。
 
 ![選考の進捗状況を管理していたスプレッドシート](/2024-11-17-14.05.56@2x.png)
 
-最終的に入社を決めたラクスルは Forkwell 経由での応募ではなかったので、お力になれず申し訳なかったです…🙈
+最終的に入社を決めたラクスルは Forkwell 経由での応募ではなかったのですが、それでも選考に際しては多分にご協力いただき助かりましたし、感謝しております🙏
 
 ## 転職活動を振り返って
 
-- 非常に魅力的な企業との出会いが多かったです。複数社の選考を通して自分を見つめ直すきかっけにもなりましたし、最終的な意思決定する際には最後の最後まで本当に悩みました。
-- 技術的な話も多く伺うことができるので、純粋に勉強になることが多いと感じました。
-- 転職活動のたびに思うことではあるのですが、1年も経つとそれまでやっていたことを詳細に思い出すことは難しくなるので、定期的にキャリアを振り返る機会を設けることは大事だと改めて感じました。
-- 自分が働く上でなにを重要視しているのかを考え直す機会になりました。これは転職活動に閉じず、今後働き続けるうえでも常に意識していきたいです。
+転職活動を振り返ると、短期間ではあったものの非常に中身の詰まった活動期間だったと改めて思います。
 
-ラクスルでは、屋台骨として成長し続けるプロダクトの商品開発から組織づくりまで積極的に関わっていきたいと思っています。組織が大きくなるに連れて、多くの課題にトライできる環境ですので、興味がある方はお気軽にご連絡ください！
+### 企業の中の人と話ができる
+
+普段仕事をしていて、直近ではなかなか社外の人と話す機会を得られていなかったこともあり、社外のエンジニアや役員の方と話す機会を頂けるのは貴重だと感じました。
+特に子どもが生まれてからは勉強会への参加にも消極的になっていたので、色んな会社の技術的な話を多く伺うことができたのは、純粋に勉強になることが多く楽しかったです。
+
+また、複数社の選考を通して自分を見つめ直すきっかけにもなりましたし、最終的な意思決定をする際には最後の最後まで本当に悩みました。
+
+### キャリアを振り返るきっかけになる
+
+普段業務に忙殺されていると、なかなかキャリアを振り返る機会をつくれないです。
+ただ、転職活動のたびに思うことではあるのですが、1年も経つとそれまでやっていたことを詳細に思い出すことは難しくなるので、転職意向の有無に関わらず、定期的にキャリアを振り返る機会を設けることが大事だと改めて感じました。
+
+## 最後に
+
+ラクスルでは、屋台骨として成長し続けるプロダクトの商品開発から組織づくりまで積極的に関わっていきたいと思っています。数多くの課題の解決に向けてトライできる環境ですので、興味がある方はお気軽にご連絡ください！
+
+<small>※ 本記事は [Forkwell 転職体験談投稿キャンペーン](https://forkwell.notion.site/Forkwell-13c8e16b2bb08020bf1bc01d6e68fe6b) に参加しています</small>
